// Floo·Content — Database Schema
// Source of truth for the entire database design.
// Render as ER diagram at https://dbdiagram.io
//
// Conventions
//  - Every table has UUID primary key (gen_random_uuid by default)
//  - Every mutable table has updated_at TIMESTAMPTZ default now()
//  - All foreign keys cascade-delete unless noted
//  - All tables have RLS enabled — see 20240101000001_rls_policies.sql
//
// Migration history (in order applied):
//   20240101000000  initial schema (profiles, workspaces, projects, …)
//   20240101000001  RLS policies + is_*_member() helpers
//   20240101000002  seed system data (24 skills, 4 rules templates)
//   20240101000003  storage policies for buckets
//   20240101000004  invitations
//   20240101000005  billing — subscriptions + usage_metering
//   20260427000000  drop auth.users dependency (auth moved to app layer)
//   20260427100000  AI feature columns (asset extraction + image cards)

Project floo_content {
  database_type: 'PostgreSQL'
  Note: 'AI-powered social media content management. Workspace-scoped projects with chat history, brand knowledge files, and skill catalog. Authentication is handled at the Nuxt app layer via Google OAuth + nuxt-auth-utils — Supabase auth.users is no longer referenced.'
}

// ─────────────────────────────────────────────────────────────
// 1. profiles — application-managed user records
//    Inserted directly from the Nuxt server on first Google sign-in.
//    No FK to auth.users (removed by 20260427000000_drop_auth_users_dep).
// ─────────────────────────────────────────────────────────────
Table profiles {
  id uuid [pk, default: `gen_random_uuid()`]
  name text [not null]
  email text [unique, not null]
  role text [default: 'member']
  avatar_url text [null, note: 'Google profile photo on first sign-in; CDN URL after manual upload']
  initials text [null, note: 'Derived from name for avatar fallback']
  google_sub text [unique, null, note: 'Google subject id — used to upsert across logins']
  google_refresh_token text [null, note: 'Optional, set when Google offline-access scope was granted']
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]
}

// ─────────────────────────────────────────────────────────────
// 2. workspaces — top-level org unit; owns projects
// ─────────────────────────────────────────────────────────────
Table workspaces {
  id uuid [pk, default: `gen_random_uuid()`]
  name text [not null]
  type text [default: 'general', note: 'social | campaign | email | general']
  color text [default: '#5B479D']
  description text [null]
  default_platform text [default: 'tiktok']
  owner_id uuid [not null, ref: > profiles.id]
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]
}

Table workspace_members {
  id uuid [pk, default: `gen_random_uuid()`]
  workspace_id uuid [not null, ref: > workspaces.id]
  user_id uuid [not null, ref: > profiles.id]
  role text [not null, default: 'editor', note: 'owner | editor | viewer']
  joined_at timestamptz [default: `now()`]

  indexes {
    (workspace_id, user_id) [unique]
    user_id
  }
}

// ─────────────────────────────────────────────────────────────
// 3. projects — chat-first content surfaces inside a workspace
//
//    A project shows up in a user's sidebar if they are EITHER a
//    workspace member OR a project_members row exists for them
//    (the second path is how invited collaborators get access).
// ─────────────────────────────────────────────────────────────
Table projects {
  id uuid [pk, default: `gen_random_uuid()`]
  workspace_id uuid [not null, ref: > workspaces.id]
  name text [not null]
  platform text [not null, default: 'tiktok', note: 'tiktok | instagram | twitter | youtube | linkedin | threads']
  color text [default: '#4B70B6']
  is_pinned boolean [default: false]
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]

  indexes {
    workspace_id
  }
}

// 1:1 with projects — split out so context updates don't bump project.updated_at
Table project_contexts {
  id uuid [pk, default: `gen_random_uuid()`]
  project_id uuid [unique, not null, ref: > projects.id]
  brand_voice text [default: '']
  do_guidelines "text[]" [default: `'{}'`]
  dont_guidelines "text[]" [default: `'{}'`]
  hashtags "text[]" [default: `'{}'`]
  platform_handle text [null]
  platform_bio text [null]
  platform_followers integer [null]
  updated_at timestamptz [default: `now()`]
}

Table project_members {
  id uuid [pk, default: `gen_random_uuid()`]
  project_id uuid [not null, ref: > projects.id]
  user_id uuid [not null, ref: > profiles.id]
  role text [not null, default: 'editor', note: 'owner | editor | viewer']
  joined_at timestamptz [default: `now()`]

  indexes {
    (project_id, user_id) [unique]
  }
}

// ─────────────────────────────────────────────────────────────
// 4. brand_assets — file metadata; binaries live in Storage bucket `brand-assets`
//
//    extracted_text/extraction_status caches plaintext from PDFs/DOCX/TXT
//    so the AI prompt can reference actual content, not just filenames.
// ─────────────────────────────────────────────────────────────
Table brand_assets {
  id uuid [pk, default: `gen_random_uuid()`]
  project_id uuid [not null, ref: > projects.id]
  name text [not null]
  size_bytes bigint [not null]
  category text [not null, note: 'image | video | document | presentation | spreadsheet | other']
  extension text [not null]
  description text [default: '']
  storage_path text [not null, note: 'brand-assets/{projectId}/{uuid}.{ext}']
  preview_url text [null, note: 'Signed URL — image previews only']
  uploaded_by uuid [null, ref: > profiles.id]
  uploaded_at timestamptz [default: `now()`]
  // ── extraction columns (added 20260427100000_ai_features) ──
  extracted_text text [null, note: 'Plaintext extracted from PDF/DOCX/TXT — capped, fed into prompt builder']
  extraction_status text [default: 'pending', note: 'pending | done | skipped | error']
  extraction_error text [null]
  extracted_at timestamptz [null]

  indexes {
    project_id
  }
}

// ─────────────────────────────────────────────────────────────
// 5. skills — system catalog + workspace-custom skills
// ─────────────────────────────────────────────────────────────
Table skills {
  id uuid [pk, default: `gen_random_uuid()`]
  name text [not null]
  category text [not null, note: 'voice | format | trend | workflow']
  description text [default: '']
  instructions text [null]
  examples text [null]
  is_custom boolean [default: false]
  created_by uuid [null, ref: > profiles.id]
  workspace_id uuid [null, ref: > workspaces.id, note: 'NULL for system skills, set for custom skills']
  created_at timestamptz [default: `now()`]
}

Table project_skills {
  project_id uuid [ref: > projects.id]
  skill_id uuid [ref: > skills.id]
  active boolean [default: true]

  indexes {
    (project_id, skill_id) [pk]
    project_id
  }
}

// ─────────────────────────────────────────────────────────────
// 6. chat — messages + structured output cards
//
//    output_cards.kind distinguishes a numbered-list `text` card from
//    an `image` card (CogView outputs). Image cards keep `items`
//    populated with prompt strings for backwards compatibility.
// ─────────────────────────────────────────────────────────────
Table chat_messages {
  id uuid [pk, default: `gen_random_uuid()`]
  project_id uuid [not null, ref: > projects.id]
  role text [not null, note: 'user | assistant']
  content text [not null]
  mode_label text [null, note: 'Image concept | Caption | Hooks | …']
  metadata jsonb [default: `'{}'::jsonb`, note: 'Attachment storage paths, token usage, citations, etc.']
  created_at timestamptz [default: `now()`]

  indexes {
    project_id
  }
}

Table output_cards {
  id uuid [pk, default: `gen_random_uuid()`]
  message_id uuid [not null, ref: > chat_messages.id]
  label text [null]
  sub text [null]
  accent text [null]
  can_copy boolean [default: true]
  items "text[]" [not null, default: `'{}'`]
  // ── image-card variant (added 20260427100000_ai_features) ──
  kind text [default: 'text', note: 'text | image']
  images jsonb [default: `'[]'::jsonb`, note: 'Array of {url, prompt, size} when kind=image']
}

// ─────────────────────────────────────────────────────────────
// 7. saved_outputs — user-bookmarked AI outputs at project scope
// ─────────────────────────────────────────────────────────────
Table saved_outputs {
  id uuid [pk, default: `gen_random_uuid()`]
  project_id uuid [not null, ref: > projects.id]
  label text [not null]
  sub text [null]
  accent text [null]
  items "text[]" [not null, default: `'{}'`]
  saved_by uuid [null, ref: > profiles.id]
  saved_at timestamptz [default: `now()`]
  // ── mirrors output_cards.kind so saved image outputs render correctly ──
  kind text [default: 'text', note: 'text | image']
  images jsonb [default: `'[]'::jsonb`]
}

// ─────────────────────────────────────────────────────────────
// 8. rules_templates — preset Rules tab values (system + custom)
// ─────────────────────────────────────────────────────────────
Table rules_templates {
  id uuid [pk, default: `gen_random_uuid()`]
  workspace_id uuid [null, ref: > workspaces.id, note: 'NULL for system templates']
  name text [not null]
  voice_preview text [null]
  brand_voice text [null]
  do_guidelines "text[]" [default: `'{}'`]
  dont_guidelines "text[]" [default: `'{}'`]
  hashtags "text[]" [default: `'{}'`]
  is_system boolean [default: false]
  created_at timestamptz [default: `now()`]
}

// ─────────────────────────────────────────────────────────────
// 9. invitations — pending invites to a workspace OR a project
//    Consumed by /api/invites/:token/accept (inserts the matching
//    workspace_members or project_members row).
// ─────────────────────────────────────────────────────────────
Table invitations {
  id uuid [pk, default: `gen_random_uuid()`]
  token text [unique, not null, note: 'Random URL token; never expose row id in URLs']
  email text [not null]
  role text [not null, default: 'editor', note: 'editor | viewer']
  workspace_id uuid [null, ref: > workspaces.id, note: 'Mutually exclusive with project_id']
  project_id uuid [null, ref: > projects.id, note: 'Mutually exclusive with workspace_id']
  invited_by uuid [not null, ref: > profiles.id]
  accepted_at timestamptz [null]
  expires_at timestamptz [not null, note: 'Defaults to now()+14d via column default']
  created_at timestamptz [default: `now()`]

  indexes {
    token
    email
    accepted_at [note: 'Partial index WHERE accepted_at IS NULL — pending invite lookup']
  }

  Note: 'CHECK constraint enforces exactly one of workspace_id / project_id is set.'
}

// ─────────────────────────────────────────────────────────────
// 10. subscriptions — one row per workspace; auto-created on workspace insert
//     Stripe identifiers are populated when the workspace upgrades to a paid plan.
// ─────────────────────────────────────────────────────────────
Table subscriptions {
  id uuid [pk, default: `gen_random_uuid()`]
  workspace_id uuid [unique, not null, ref: > workspaces.id]
  plan text [not null, default: 'free', note: 'free | pro | team']
  status text [not null, default: 'active', note: 'active | trialing | past_due | canceled | incomplete']
  stripe_customer_id text [unique, null]
  stripe_subscription_id text [unique, null]
  stripe_price_id text [null]
  current_period_start timestamptz [null]
  current_period_end timestamptz [null]
  cancel_at_period_end boolean [default: false]
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]
}

// ─────────────────────────────────────────────────────────────
// 11. usage_metering — monthly counters per workspace × metric
//     Atomically incremented via the increment_usage(workspace_id, metric, amount)
//     SQL function. Reset is implicit — a new row is created on month rollover.
// ─────────────────────────────────────────────────────────────
Table usage_metering {
  id uuid [pk, default: `gen_random_uuid()`]
  workspace_id uuid [not null, ref: > workspaces.id]
  metric text [not null, default: 'ai_messages']
  period_start date [not null, note: 'First day of the month in UTC']
  count bigint [not null, default: 0]
  updated_at timestamptz [default: `now()`]

  indexes {
    (workspace_id, metric, period_start) [unique]
    (workspace_id, period_start)
  }
}

// ─────────────────────────────────────────────────────────────
// RLS POLICIES (annotated — defined in 20240101000001_rls_policies.sql)
// ─────────────────────────────────────────────────────────────
// profiles            : SELF read/update on own row; insert by app server
// workspaces          : member can SELECT; owner can UPDATE/DELETE; auth user can INSERT
// workspace_members   : workspace owner can INSERT/UPDATE/DELETE; members can SELECT
// projects            : workspace member OR project_members row → SELECT;
//                       editor+ on workspace OR project → INSERT/UPDATE/DELETE
// project_contexts    : same as projects
// project_members     : workspace owner OR project owner can INSERT/UPDATE/DELETE
// brand_assets        : project member can SELECT/INSERT/DELETE; uploader/editor can UPDATE
// skills              : SYSTEM rows readable by all; workspace custom rows by workspace members;
//                       INSERT/UPDATE/DELETE: workspace editor+
// project_skills      : project member can SELECT; editor+ can INSERT/UPDATE/DELETE
// chat_messages       : project member can SELECT/INSERT
// output_cards        : project member can SELECT (via message join)
// saved_outputs       : project member can SELECT/INSERT/UPDATE/DELETE
// rules_templates     : SYSTEM rows readable by all; workspace rows by workspace members;
//                       INSERT/UPDATE/DELETE: workspace editor+
// invitations         : inviter or current member of target can SELECT;
//                       editor+ on target can INSERT; inviter can DELETE
// subscriptions       : member can SELECT; mutations via service-role only (Stripe webhook)
// usage_metering      : member can SELECT; mutations via increment_usage SQL function only

// ─────────────────────────────────────────────────────────────
// STORAGE BUCKETS (created via Supabase dashboard or storage.create_bucket)
// ─────────────────────────────────────────────────────────────
// brand-assets         private  50 MB  brand-assets/{projectId}/{uuid}.{ext}
// avatars              public    5 MB  avatars/{userId}/{uuid}.{ext}
// message-attachments  private  25 MB  message-attachments/{projectId}/{messageId}/{uuid}.{ext}
